fix: colored buttons not wrapping at small widths

--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ button i {
 	justify-content: center;
 	gap: 15px;
 	margin-bottom: 5px;
+	flex-wrap: wrap;
 }
 .main-theme-switches button {
 	height: 44px;
